crates/sui-prover/tests/snapshots/spec_purity/spec_purity_transfer_module.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 128
expression: output
snapshot_kind: text
---
exiting with bytecode transformation errors
warning: unused variable
  ┌─ tests/inputs/spec_purity/spec_purity_transfer_module.move:8:23
  │
8 │     fun sqrt(x: u128, ctx: &mut TxContext): u64 {
  │                       ^^^ Unused parameter 'ctx'. Consider removing or prefixing with an underscore: '_ctx'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning: unused mutable reference '&mut' parameter
  ┌─ tests/inputs/spec_purity/spec_purity_transfer_module.move:8:28
  │
8 │     fun sqrt(x: u128, ctx: &mut TxContext): u64 {
  │                       ---  ^^^^^^^^^^^^^^ Mutable reference is never used mutably, consider switching to an immutable reference '&' instead
  │                       │     
  │                       For parameters, this can be silenced by prefixing the name with an underscore, e.g. '_ctx'
  │
  = This warning can be suppressed with '#[allow(unused_mut_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning: unused 'mut' modifiers
   ┌─ tests/inputs/spec_purity/spec_purity_transfer_module.move:24:17
   │
24 │         let mut parent = Parent { id: parent_id };
   │             --- ^^^^^^ The variable 'parent' is never used mutably
   │             │    
   │             Consider removing the 'mut' declaration here
   │
   = This warning can be suppressed with '#[allow(unused_let_mut)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: Consider removing non-pure calls form spec
   ┌─ tests/inputs/spec_purity/spec_purity_transfer_module.move:23:25
   │
23 │         let parent_id = object::new(ctx);
   │                         ^^^^^^^^^^^^^^^^

error: Consider removing non-pure calls form spec
   ┌─ tests/inputs/spec_purity/spec_purity_transfer_module.move:29:9
   │
29 │         transfer::share_object(parent);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
